--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(struct_point)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(struct_point main.cpp Struct.h)
+add_executable(struct_point main.cpp Struct.h Function.h)
